# taichi

./: .gitignore  CMakeLists.txt  README_FORGE.md  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: build_llvm19_windows.yml  build_llvm20_linux.yml  perf.yml  publish_pypi.yml  release.yml  testing.yml
.github/workflows/scripts/: common-utils.ps1
.github/workflows/scripts/ti_build/: compiler.py  entry.py  llvm.py  misc.py  python.py  vulkan.py
cmake/: utils.cmake
compile_doc/: LLVM20_升级分析.md  typed_ptr_worklist.md  优化方向建议（GPT5.4 thinking）.md  优化方向建议（opus 4.6 High）.md  偏差.md  现状.md
docs/forge/: forge_options.en.md  forge_options.zh.md  sparse_snode_on_vulkan.en.md  sparse_snode_on_vulkan.zh.md
docs/lang/articles/basic/: sparse.md
docs/lang/articles/contribution/: dev_install.md
python/taichi/: _main.py
python/taichi/lang/ast/: ast_transformer.py
python/taichi_forge/: __init__.py
python/taichi_forge/_snode/: fields_builder.py
python/taichi_forge/lang/: impl.py  kernel_impl.py  snode.py
python/taichi_forge/ui/: staging_buffer.py
scripts/: build_llvm19_local.ps1
taichi/analysis/: offline_cache_util.cpp
taichi/codegen/cpu/: CMakeLists.txt  codegen_cpu.cpp
taichi/codegen/cuda/: codegen_cuda.cpp
taichi/codegen/dx12/: CMakeLists.txt  dx12_global_optimize_module.cpp
taichi/codegen/llvm/: codegen_llvm.cpp  llvm_codegen_utils.cpp
taichi/codegen/spirv/: CMakeLists.txt  kernel_compiler.cpp  kernel_utils.h  snode_struct_compiler.cpp  snode_struct_compiler.h  spirv_allocator_contract.h  spirv_codegen.cpp  spirv_codegen.h  spirv_ir_builder.cpp  spirv_ir_builder.h
taichi/compilation_manager/: inproc_disk_mirror.cpp  kernel_compilation_manager.cpp
taichi/ir/: snode.h  transforms.h
taichi/program/: compile_config.cpp  compile_config.h  extension.cpp  extension.h  program.cpp
taichi/python/: export_lang.cpp
taichi/rhi/: public_device.h
taichi/rhi/vulkan/: vulkan_device.cpp  vulkan_device.h  vulkan_device_creator.cpp
taichi/runtime/amdgpu/: CMakeLists.txt  jit_amdgpu.cpp
taichi/runtime/cpu/: CMakeLists.txt
taichi/runtime/cuda/: CMakeLists.txt  jit_cuda.cpp
taichi/runtime/gfx/: CMakeLists.txt  runtime.cpp  runtime.h  snode_allocator.cpp  snode_allocator.h  snode_tree_manager.cpp  snode_tree_manager.h
taichi/runtime/llvm/: CMakeLists.txt  llvm_opt_pipeline.h
taichi/runtime/program_impls/gfx/: gfx_program.cpp
taichi/transforms/: compile_to_offloads.cpp  demote_dense_struct_fors.cpp  demote_mesh_statements.cpp  inlining.cpp  inlining.h  make_block_local.cpp  make_mesh_block_local.cpp  make_mesh_thread_local.cpp  make_thread_local.cpp  scalarize.cpp  simplify.cpp  whole_kernel_cse.cpp
taichi/ui/ggui/: gui.cpp
tests/cpp/llvm/: llvm_offline_cache_test.cpp
tests/p1/: _bench_runner.py  bench_cold_start.py  smoke_test.py
tests/p2/: RESULTS.md  bench_p1d_vulkan.json  bench_p1d_vulkan.py  heavy_kernels.py  tier_parity_spv_branchy.py  tier_parity_vulkan.py  tier_smoke.py
tests/p3/: RESULTS.md  bench_llvm_optlvl.py  bench_llvm_optlvl2.txt  bench_p3c_scalar.py  bench_p3d_ab.py  bench_tier_fast_cuda.py  bench_tier_fast_llvm.py  profile_p3d.py  profile_p3d.txt  profile_p3d_many.py  show_profile.py  test_p3d_error_format.py  test_tier_fast_cuda.py  test_tier_fast_parity.py  verify_p3c_earlyexit.py
