[build-system]
requires = [
    "setuptools>=64", "wheel",
    "numpy", "pybind11", "cmake>=3.20",
    "scikit-build", "ninja; platform_system != 'Windows'",
]
build-backend = "setuptools.build_meta"

# Note: project metadata (name, version, requires-python, classifiers) is
# declared in setup.py for historical reasons. Do not add a [project]
# table here unless setup.py is refactored to stop supplying the same
# fields, otherwise setuptools will refuse to build the wheel.

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Calling non-taichi function",
    "ignore:`np.int` is a deprecated alias",
    "ignore:Operator \"is\" in Taichi scope is deprecated",
    "ignore:Operator \"is not\" in Taichi scope is deprecated"
]

[tool.yapf]
based_on_style = "pep8"
blank_line_before_nested_class_or_def = false
